gtkD/wrap/cHeaders/GL/gl.d


//C     GLAPI void GLAPIENTRY glMultiTexCoord2fv( GLenum target, const GLfloat *v );
void  glMultiTexCoord2fv(GLenum target, GLfloat *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord2i( GLenum target, GLint s, GLint t );
void  glMultiTexCoord2i(GLenum target, GLint s, GLint t);

//C     GLAPI void GLAPIENTRY glMultiTexCoord2iv( GLenum target, const GLint *v );
void  glMultiTexCoord2iv(GLenum target, GLint *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord2s( GLenum target, GLshort s, GLshort t );
void  glMultiTexCoord2s(GLenum target, GLshort s, GLshort t);

//C     GLAPI void GLAPIENTRY glMultiTexCoord2sv( GLenum target, const GLshort *v );
void  glMultiTexCoord2sv(GLenum target, GLshort *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord3d( GLenum target, GLdouble s, GLdouble t, GLdouble r );
void  glMultiTexCoord3d(GLenum target, GLdouble s, GLdouble t, GLdouble r);

//C     GLAPI void GLAPIENTRY glMultiTexCoord3dv( GLenum target, const GLdouble *v );
void  glMultiTexCoord3dv(GLenum target, GLdouble *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord3f( GLenum target, GLfloat s, GLfloat t, GLfloat r );
void  glMultiTexCoord3f(GLenum target, GLfloat s, GLfloat t, GLfloat r);

//C     GLAPI void GLAPIENTRY glMultiTexCoord3fv( GLenum target, const GLfloat *v );
void  glMultiTexCoord3fv(GLenum target, GLfloat *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord3i( GLenum target, GLint s, GLint t, GLint r );
void  glMultiTexCoord3i(GLenum target, GLint s, GLint t, GLint r);

//C     GLAPI void GLAPIENTRY glMultiTexCoord3iv( GLenum target, const GLint *v );
void  glMultiTexCoord3iv(GLenum target, GLint *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord3s( GLenum target, GLshort s, GLshort t, GLshort r );
void  glMultiTexCoord3s(GLenum target, GLshort s, GLshort t, GLshort r);

//C     GLAPI void GLAPIENTRY glMultiTexCoord3sv( GLenum target, const GLshort *v );
void  glMultiTexCoord3sv(GLenum target, GLshort *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord4d( GLenum target, GLdouble s, GLdouble t, GLdouble r, GLdouble q );
void  glMultiTexCoord4d(GLenum target, GLdouble s, GLdouble t, GLdouble r, GLdouble q);

//C     GLAPI void GLAPIENTRY glMultiTexCoord4dv( GLenum target, const GLdouble *v );
void  glMultiTexCoord4dv(GLenum target, GLdouble *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord4f( GLenum target, GLfloat s, GLfloat t, GLfloat r, GLfloat q );
void  glMultiTexCoord4f(GLenum target, GLfloat s, GLfloat t, GLfloat r, GLfloat q);

//C     GLAPI void GLAPIENTRY glMultiTexCoord4fv( GLenum target, const GLfloat *v );
void  glMultiTexCoord4fv(GLenum target, GLfloat *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord4i( GLenum target, GLint s, GLint t, GLint r, GLint q );
void  glMultiTexCoord4i(GLenum target, GLint s, GLint t, GLint r, GLint q);

//C     GLAPI void GLAPIENTRY glMultiTexCoord4iv( GLenum target, const GLint *v );
void  glMultiTexCoord4iv(GLenum target, GLint *v);

//C     GLAPI void GLAPIENTRY glMultiTexCoord4s( GLenum target, GLshort s, GLshort t, GLshort r, GLshort q );
void  glMultiTexCoord4s(GLenum target, GLshort s, GLshort t, GLshort r, GLshort q);

//C     GLAPI void GLAPIENTRY glMultiTexCoord4sv( GLenum target, const GLshort *v );
void  glMultiTexCoord4sv(GLenum target, GLshort *v);


//C     GLAPI void GLAPIENTRY glLoadTransposeMatrixd( const GLdouble m[16] );
void  glLoadTransposeMatrixd(GLdouble *m);

//C     GLAPI void GLAPIENTRY glLoadTransposeMatrixf( const GLfloat m[16] );
void  glLoadTransposeMatrixf(GLfloat *m);

//C     GLAPI void GLAPIENTRY glMultTransposeMatrixd( const GLdouble m[16] );
void  glMultTransposeMatrixd(GLdouble *m);

//C     GLAPI void GLAPIENTRY glMultTransposeMatrixf( const GLfloat m[16] );
void  glMultTransposeMatrixf(GLfloat *m);

//C     GLAPI void GLAPIENTRY glSampleCoverage( GLclampf value, GLboolean invert );
void  glSampleCoverage(GLclampf value, GLboolean invert);
